cabal-version:       2.4
name:                aoc2018
version:             0.1.0.0
synopsis:            My Advent of Code 2018 solutions.
description:         My Advent of Code 2018 solutions.
homepage:            https://github.com/Solonarv/adventofcode-2018#README
license:             MIT
license-file:        LICENSE
author:              Solonarv
maintainer:          nstamm@gmx.de
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

common deps
  build-depends:       base >=4.12 && <5
                     , containers
                     , vector
                     , bytestring
                     , text
                     , unordered-containers
                     , megaparsec
                     , linear

common lang
  default-language:    Haskell2010
  -- -XKitchenSink
  default-extensions:  TypeFamilies FlexibleContexts FlexibleInstances DataKinds GADTs
                       TypeFamilyDependencies TypeOperators PolyKinds RankNTypes
                       TypeApplications ScopedTypeVariables ConstraintKinds FunctionalDependencies
                       MultiParamTypeClasses NamedFieldPuns LambdaCase BangPatterns DerivingStrategies
                       GeneralizedNewtypeDeriving RoleAnnotations TupleSections
  ghc-options:         -Wall -O2

executable solve
  import: deps, lang
  main-is:             Main.hs
  hs-source-dirs:      src
  build-depends:       aoc2018, day01, day02, day03
  ghc-options:         -threaded -rtsopts -funbox-small-strict-fields

library
  import: deps, lang
  hs-source-dirs:      harness
  exposed-modules:     AOC.Solution, AOC.Harness
  build-depends:       optparse-applicative
                     , finite-typelits
                     , ansi-terminal
                     , htoml
                     , req
                     , http-client
                     , time
                     , data-default
  ghc-options:         -Wno-orphans

library day01
  import: deps, lang
  exposed-modules: Day01
  hs-source-dirs: day01
  build-depends: aoc2018

library day02
  import: deps, lang
  exposed-modules: Day02
  hs-source-dirs: day02
  build-depends: aoc2018

library day03
  import: deps, lang
  exposed-modules: Day03
  hs-source-dirs: day03
  build-depends: aoc2018